refactor java cluster count client to use multi project parameters which required extracting match parameters from tile cluster parameters